--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -8,9 +8,19 @@
           "name": "#%% md\n"
         }
       },
-      "source": [
-        "# clone repos and change dir"
-      ]
+      "source": "# Clone repos and change dir"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "outputs": [],
+      "source": "# clone and install tf_unet \n! git clone https://github.com/jakeret/tf_unet.git\n! cd tf_unet \u0026\u0026 python setup.py install --user",
+      "metadata": {
+        "pycharm": {
+          "metadata": false,
+          "name": "#%%\n"
+        }
+      }
     },
     {
       "cell_type": "code",
@@ -22,16 +32,7 @@
         }
       },
       "outputs": [],
-      "source": [
-        "# if project does not exit, then clone the remote repo to local\n",
-        "# if do exit now, then pull from the remote, both the main project and submodules\n",
-        "import os\n",
-        "os.chdir(\"/content\")\n",
-        "\n",
-        "!if [ ! -d \"/content/GraduationProject\" ]; then git clone https://github.com/WenjayDu/GraduationProject.git \u0026\u0026 cd GraduationProject \u0026\u0026 git submodule update --init --recursive; else cd /content/GraduationProject \u0026\u0026 git pull \u0026\u0026 cd module_minc_keras \u0026\u0026 git checkout master \u0026\u0026 git pull \u0026\u0026 cd ../module_pocketflow \u0026\u0026 git checkout master \u0026\u0026 git pull; fi\n",
-        "\n",
-        "os.chdir(\"/content/GraduationProject\")\n"
-      ]
+      "source": "# clone/update the GraduationProject\n# if project does not exit, then clone the remote repo to local\n# if do exit now, then pull from the remote, both the main project and submodules\nimport os\nos.chdir(\"/content\")\n\n!if [ ! -d \"/content/GraduationProject\" ]; then \\\n    cd /content \u0026\u0026 \\\n    echo -e \"\\n❗️Project does not exist, pulling from remote...\" \u0026\u0026 \\\n    git clone https://github.com/WenjayDu/GraduationProject.git \u0026\u0026 \\\n    cd GraduationProject \u0026\u0026 \\\n    git submodule update --init --recursive \u0026\u0026 \\\n    echo \"❗️Done pulling\"; \\\nelse \\\n    echo -e \"\\n❗️Start updating...\" \u0026\u0026 \\\n    cd /content/GraduationProject \u0026\u0026 \\\n    echo \"🚩Now in `pwd`\" \u0026\u0026 \\\n    git pull \u0026\u0026 \\\n    cd module_minc_keras \u0026\u0026 \\\n    echo \"🚩Now in `pwd`\" \u0026\u0026 \\\n    git checkout master \u0026\u0026 \\\n    git pull \u0026\u0026 \\\n    cd ../module_pocketflow \u0026\u0026 \\\n    echo \"🚩Now in `pwd`\" \u0026\u0026 \\\n    git checkout master \u0026\u0026 \\\n    git pull \u0026\u0026 \\\n    echo \"❗️Done updating\"; \\\nfi\n"
     },
     {
       "cell_type": "markdown",
@@ -41,7 +42,7 @@
           "name": "#%% md\n"
         }
       },
-      "source": "# prepare dataset"
+      "source": "# Prepare dataset"
     },
     {
       "cell_type": "code",
@@ -53,18 +54,7 @@
         }
       },
       "outputs": [],
-      "source": [
-        "# decompressing dataset output.tar.bz2\n",
-        "!tar -jxvf /content/GraduationProject/module_minc_keras/data/output.tar.bz2 -C /content/GraduationProject/datasets \u0026\u003e /dev/null\n",
-        "!mv /content/GraduationProject/datasets/output /content/GraduationProject/datasets/mri \n",
-        "\n",
-        "# prepare mri dataset\n",
-        "import os\n",
-        "os.chdir(\"/content/GraduationProject\")\n",
-        "from data_processing.prepare_datasets import prepare_mri_dataset\n",
-        "# generate small datasets to avoid memory exceeding causing process killed on cloab\n",
-        "prepare_mri_dataset(ratios\u003d[0.3, 0.15]) \n"
-      ]
+      "source": "os.chdir(\"/content/GraduationProject/datasets\")\n# decompress output.tar.bz2 and make mri dataset\n!tar -jxvf /content/GraduationProject/module_minc_keras/data/output.tar.bz2 -C ./ \u0026\u003e /dev/null \u0026\u0026 \\\n    mv output mri \n# download sorteo.tar.bz2 and make sorteo dataset\n!wget https://amnesia.cbrain.mcgill.ca/deeplearning/sorteo.tar.bz2 --no-check-certificate \u0026\u0026 \\\n    mkdir sorteo \u0026\u0026 \\\n    tar -jxvf sorteo.tar.bz2 -C sorteo \u0026\u003e /dev/null\n# prepare datasets\nos.chdir(\"/content/GraduationProject\")\nfrom data_processing.prepare_datasets import prepare_dataset\n# generate small datasets to avoid memory exceeding causing process killed on cloab\nprepare_dataset(dataset_name\u003d\"mri\",ratios\u003d[0.3, 0.15]) \nprepare_dataset(dataset_name\u003d\"sorteo\",ratios\u003d[0.3, 0.15])\n\n# convert generated .npy files to .tfrecords files\nfrom data_processing.convert_npy_to_tfrecords import convert_whole_dataset\nconvert_whole_dataset(\"mri\")\nconvert_whole_dataset(\"sorteo\")\n"
     },
     {
       "cell_type": "markdown",
@@ -73,7 +63,46 @@
           "metadata": false
         }
       },
-      "source": "# construct unet with keras and train it"
+      "source": "# Construct unet with Keras and train it"
+    },
+    {
+      "cell_type": "markdown",
+      "source": "## on MRI dataset",
+      "metadata": {
+        "pycharm": {
+          "metadata": false
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": "### architecture\u003doriginal, epoch\u003d10",
+      "metadata": {
+        "pycharm": {
+          "metadata": false
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "outputs": [],
+      "source": "!python3 /content/GraduationProject/unet_constructing/keras_impl_original.py \\\n    --dataset_name\u003d\"mri\" \\\n    --epoch_num\u003d10",
+      "metadata": {
+        "pycharm": {
+          "metadata": false,
+          "name": "#%%\n"
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": "### architecture\u003doriginal with BN in the contracting path, epoch\u003d10",
+      "metadata": {
+        "pycharm": {
+          "metadata": false
+        }
+      }
     },
     {
       "cell_type": "code",
@@ -85,7 +114,143 @@
         }
       },
       "outputs": [],
-      "source": "!python3 /content/GraduationProject/unet_constructing/construct_unet_with_keras.py"
+      "source": "!python3 /content/GraduationProject/unet_constructing/keras_impl_original_with_BN.py \\\n    --dataset_name\u003d\"mri\" \\\n    --epoch_num\u003d10"
+    },
+    {
+      "cell_type": "markdown",
+      "source": "### architecture\u003dsmaller, epoch\u003d10",
+      "metadata": {
+        "pycharm": {
+          "metadata": false,
+          "name": "#%% md\n"
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": "!python3 /content/GraduationProject/unet_constructing/keras_impl_smaller.py \\\n    --dataset_name\u003d\"mri\" \\\n    --epoch_num\u003d10",
+      "metadata": {
+        "pycharm": {
+          "metadata": false,
+          "name": "#%%\n"
+        }
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": "### architecture\u003dsmaller with BN in the contracting path, epoch\u003d10",
+      "metadata": {
+        "pycharm": {
+          "metadata": false
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "outputs": [],
+      "source": "!python3 /content/GraduationProject/unet_constructing/keras_impl_smaller_with_BN.py \\\n    --dataset_name\u003d\"mri\" \\\n    --epoch_num\u003d10",
+      "metadata": {
+        "pycharm": {
+          "metadata": false,
+          "name": "#%%\n"
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": "## on SORTEO dataset",
+      "metadata": {
+        "pycharm": {
+          "metadata": false
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": "### architecture\u003doriginal, epoch\u003d10",
+      "metadata": {
+        "pycharm": {
+          "metadata": false
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "outputs": [],
+      "source": "!python3 /content/GraduationProject/unet_constructing/keras_impl_original.py \\\n    --dataset_name\u003d\"sorteo\" \\\n    --epoch_num\u003d10",
+      "metadata": {
+        "pycharm": {
+          "metadata": false,
+          "name": "#%%\n"
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": "### architecture\u003doriginal with BN in the contracting path, epoch\u003d10",
+      "metadata": {
+        "pycharm": {
+          "metadata": false
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "outputs": [],
+      "source": "!python3 /content/GraduationProject/unet_constructing/keras_impl_original_with_BN.py \\\n    --dataset_name\u003d\"sorteo\" \\\n    --epoch_num\u003d10",
+      "metadata": {
+        "pycharm": {
+          "metadata": false,
+          "name": "#%%\n"
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": "### architecture\u003dsmaller, epoch\u003d10",
+      "metadata": {
+        "pycharm": {
+          "metadata": false
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "outputs": [],
+      "source": "!python3 /content/GraduationProject/unet_constructing/keras_impl_smaller.py \\\n    --dataset_name\u003d\"sorteo\" \\\n    --epoch_num\u003d10",
+      "metadata": {
+        "pycharm": {
+          "metadata": false,
+          "name": "#%%\n"
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": "### architecture\u003dsmaller with BN in the contracting path, epoch\u003d10",
+      "metadata": {
+        "pycharm": {
+          "metadata": false
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "outputs": [],
+      "source": "!python3 /content/GraduationProject/unet_constructing/keras_impl_smaller_with_BN.py \\\n    --dataset_name\u003d\"sorteo\" \\\n    --epoch_num\u003d10",
+      "metadata": {
+        "pycharm": {
+          "metadata": false,
+          "name": "#%%\n"
+        }
+      }
     },
     {
       "cell_type": "markdown",
@@ -94,9 +259,7 @@
           "metadata": false
         }
       },
-      "source": [
-        "## make prediction with trained model"
-      ]
+      "source": "## make prediction with trained model"
     },
     {
       "cell_type": "code",
@@ -108,7 +271,7 @@
         }
       },
       "outputs": [],
-      "source": "from module_minc_keras.predict import predict\nos.chdir(\"/content/GraduationProject\")\n! if [ ! -d \"output/keras_implementation/predictions\" ]; then mkdir output/keras_implementation/predictions; fi \npredict(model_fn\u003d\u0027output/keras_implementation/saved_models/model_of_unet_at_mri.hdf5\u0027, \n        predict_dir\u003d\u0027ouput/keras_implementation/predictions\u0027,\n        data_dir\u003d\u0027datasets/mri_pad_4_results/data\u0027, \n        images_fn\u003d\u0027datasets/mri_pad_4_results/report/images.csv\u0027, \n        loss\u003d\u0027categorical_crossentropy\u0027,\n        images_to_predict\u003d\u0027all\u0027, \n        category\u003d\"test\", \n        verbose\u003dTrue)\n"
+      "source": "from module_minc_keras.predict import predict\nos.chdir(\"/content/GraduationProject\")\n!if [ ! -d \"output/keras_impl_original_with_BN/predictions\" ]; then \\\n    mkdir output/keras_implementation/predictions; \\\nfi\n\npredict(model_fn\u003d\u0027output/keras_impl_original_with_BN/saved_models/unet_model_on_mri.hdf5\u0027, \n        predict_dir\u003d\u0027ouput/keras_impl_original_with_BN/predictions\u0027,\n        data_dir\u003d\u0027datasets/mri_pad_4_results/data\u0027, \n        images_fn\u003d\u0027datasets/mri_pad_4_results/report/images.csv\u0027, \n        loss\u003d\u0027categorical_crossentropy\u0027,\n        images_to_predict\u003d\u0027all\u0027, \n        category\u003d\"test\", \n        verbose\u003dTrue)"
     },
     {
       "cell_type": "markdown",
@@ -117,7 +280,25 @@
           "metadata": false
         }
       },
-      "source": "# construct unet with tensorflow and train it"
+      "source": "# Construct unet with TensorFlow and train it"
+    },
+    {
+      "cell_type": "markdown",
+      "source": "## on MRI dataset",
+      "metadata": {
+        "pycharm": {
+          "metadata": false
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": "### architecture\u003doriginal, epoch\u003d10",
+      "metadata": {
+        "pycharm": {
+          "metadata": false
+        }
+      }
     },
     {
       "cell_type": "code",
@@ -129,7 +310,79 @@
         }
       },
       "outputs": [],
-      "source": "os.chdir(\"/content/GraduationProject\")\n!python3 ./unet_constructing/construct_unet_with_tf.py \\\n      --train_batch_size\u003d64 \\\n      --validate_batch_size\u003d64 \\\n      --test_batch_size\u003d64\n"
+      "source": "!python3 /content/GraduationProject/unet_constructing/tf_impl_original.py \\\n    --train_batch_size\u003d64 \\\n    --validate_batch_size\u003d64 \\\n    --test_batch_size\u003d64 \\\n    --dataset_name\u003d\"mri\" \\\n    --epoch_num\u003d10"
+    },
+    {
+      "cell_type": "markdown",
+      "source": "### architecture\u003doriginal with BN in the contracting path, epoch\u003d10",
+      "metadata": {
+        "pycharm": {
+          "metadata": false
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "outputs": [],
+      "source": "!python3 /content/GraduationProject/unet_constructing/tf_impl_original_with_BN.py \\\n    --train_batch_size\u003d64 \\\n    --validate_batch_size\u003d64 \\\n    --test_batch_size\u003d64 \\\n    --dataset_name\u003d\"mri\" \\\n    --epoch_num\u003d10",
+      "metadata": {
+        "pycharm": {
+          "metadata": false,
+          "name": "#%%\n"
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": "## on SORTEO dataset",
+      "metadata": {
+        "pycharm": {
+          "metadata": false
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": "### architecture\u003doriginal, epoch\u003d10",
+      "metadata": {
+        "pycharm": {
+          "metadata": false
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "outputs": [],
+      "source": "!python3 /content/GraduationProject/unet_constructing/tf_impl_original.py \\\n    --train_batch_size\u003d64 \\\n    --validate_batch_size\u003d64 \\\n    --test_batch_size\u003d64 \\\n    --dataset_name\u003d\"sorteo\" \\\n    --epoch_num\u003d10",
+      "metadata": {
+        "pycharm": {
+          "metadata": false,
+          "name": "#%%\n"
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": "### architecture\u003doriginal with BN in the contracting path, epoch\u003d10",
+      "metadata": {
+        "pycharm": {
+          "metadata": false
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "outputs": [],
+      "source": "!python3 /content/GraduationProject/unet_constructing/tf_impl_original_with_BN.py \\\n    --train_batch_size\u003d64 \\\n    --validate_batch_size\u003d64 \\\n    --test_batch_size\u003d64 \\\n    --dataset_name\u003d\"sorteo\" \\\n    --epoch_num\u003d10\n",
+      "metadata": {
+        "pycharm": {
+          "metadata": false,
+          "name": "#%%\n"
+        }
+      }
     },
     {
       "cell_type": "markdown",
