--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -54,7 +54,7 @@
         }
       },
       "outputs": [],
-      "source": "os.chdir(\"/content/GraduationProject/datasets\")\n# decompress output.tar.bz2 and make mri dataset\n!tar -jxvf /content/GraduationProject/module_minc_keras/data/output.tar.bz2 -C ./ \u0026\u003e /dev/null \u0026\u0026 \\\n    mv output mri \n# download sorteo.tar.bz2 and make sorteo dataset\n!wget https://amnesia.cbrain.mcgill.ca/deeplearning/sorteo.tar.bz2 --no-check-certificate \u0026\u0026 \\\n    mkdir sorteo \u0026\u0026 \\\n    tar -jxvf sorteo.tar.bz2 -C sorteo \u0026\u003e /dev/null\n# prepare datasets\nos.chdir(\"/content/GraduationProject\")\nfrom data_processing.prepare_datasets import prepare_dataset\n# generate small datasets to avoid memory exceeding causing process killed on cloab\nprepare_dataset(dataset_name\u003d\"mri\",ratios\u003d[0.3, 0.15]) \nprepare_dataset(dataset_name\u003d\"sorteo\",ratios\u003d[0.3, 0.15])\n\n# convert generated .npy files to .tfrecords files\nfrom data_processing.convert_npy_to_tfrecords import convert_whole_dataset\nconvert_whole_dataset(\"mri\")\nconvert_whole_dataset(\"sorteo\")\n"
+      "source": "os.chdir(\"/content/GraduationProject/datasets\")\n# decompress output.tar.bz2 and make mri dataset\n!if [ ! -d \"./mri\" ]; then \\\n    tar -jxvf /content/GraduationProject/module_minc_keras/data/output.tar.bz2 -C ./ \u0026\u003e /dev/null \u0026\u0026 \\\n    mv output mri; \\\nfi\n\n# download sorteo.tar.bz2 and make sorteo dataset\n!if [ ! -d \"./sorteo\" ]; then \\\n    wget https://amnesia.cbrain.mcgill.ca/deeplearning/sorteo.tar.bz2 --no-check-certificate \u0026\u0026 \\\n    mkdir sorteo \u0026\u0026 \\\n    tar -jxvf sorteo.tar.bz2 -C sorteo \u0026\u003e /dev/null; \\\nfi\n\n# prepare datasets\nos.chdir(\"/content/GraduationProject\")\nfrom data_processing.prepare_datasets import prepare_dataset\n# generate small datasets to avoid memory exceeding causing process killed on cloab\nprepare_dataset(dataset_name\u003d\"mri\",ratios\u003d[0.3, 0.15]) \nprepare_dataset(dataset_name\u003d\"sorteo\",ratios\u003d[0.3, 0.15])\n\n# convert generated .npy files to .tfrecords files\nfrom data_processing.convert_npy_to_tfrecords import convert_whole_dataset\nconvert_whole_dataset(\"mri\")\nconvert_whole_dataset(\"sorteo\")\n"
     },
     {
       "cell_type": "markdown",
@@ -483,9 +483,7 @@
           "name": "#%% md\n"
         }
       },
-      "source": [
-        "# model compressing"
-      ]
+      "source": "# Model compressing"
     },
     {
       "cell_type": "code",
@@ -497,7 +495,28 @@
         }
       },
       "outputs": [],
-      "source": "!if [ ! -d \"/content/GraduationProject/module_pocketflow/model_compressing\" ]; then \\ \n    cp -r /content/GraduationProject/model_compressing /content/GraduationProject/module_pocketflow/; \\\nfi \n\nos.chdir(\"/content/GraduationProject/module_pocketflow\")\n!./scripts/run_local.sh model_compressing/unet_at_mri_for_pf_run.py \\\n        --learner\u003dfull-prec \\\n        --cycle_length\u003d1 \\\n        --nb_threads\u003d1 \\\n        --buffer_size\u003d1 \\\n        --prefetch_size\u003d1"
+      "source": "!if [ ! -d \"/content/GraduationProject/module_pocketflow/compressing_with_PF\" ]; then \\ \n    cp -r /content/GraduationProject/compressing_with_PF /content/GraduationProject/module_pocketflow/; \\\nfi \n\nos.chdir(\"/content/GraduationProject/module_pocketflow\")\n!./scripts/run_local.sh compressing_with_PF/unet_on_mri_run.py \\\n        --learner\u003dfull-prec \\\n        --cycle_length\u003d1 \\\n        --nb_threads\u003d1 \\\n        --buffer_size\u003d1 \\\n        --prefetch_size\u003d1\n\n"
+    },
+    {
+      "cell_type": "markdown",
+      "source": "# Make record of GPU state",
+      "metadata": {
+        "pycharm": {
+          "metadata": false
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "outputs": [],
+      "source": "! while [ 1 ]; \\\ndo echo -e `nvidia-smi`\"\\n\\n\" \u003e\u003e /content/gpu-record.md \u0026\u0026 \\\n   sleep 5; \\\ndone",
+      "metadata": {
+        "pycharm": {
+          "metadata": false,
+          "name": "#%%\n"
+        }
+      }
     }
   ],
   "metadata": {
