update notebook, add divisor_16_epoch_20;

--- a/design_unet_on_colab.ipynb
+++ b/design_unet_on_colab.ipynb
@@ -127,7 +127,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### architecture=original, epoch=10"
+    "### original, epoch=10"
    ],
    "metadata": {
     "pycharm": {
@@ -159,7 +159,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### architecture=original with BN in the contracting path, epoch=10"
+    "### original with BN, epoch=10"
    ],
    "metadata": {
     "collapsed": false
@@ -188,7 +188,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### architecture=smaller(divisor=2), epoch=10"
+    "### original, divisor=2, epoch=10"
    ],
    "metadata": {
     "pycharm": {
@@ -221,7 +221,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### architecture=smaller(divisor=2) with BN in the contracting path, epoch=10"
+    "### original with BN, divisor=2, epoch=10"
    ],
    "metadata": {
     "pycharm": {
@@ -262,7 +262,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### architecture=smaller(divisor=4), epoch=10"
+    "### original, divisor=4, epoch=10"
    ],
    "metadata": {
     "collapsed": false
@@ -292,7 +292,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### architecture=smaller(divisor=4) with BN in the contracting path, epoch=10"
+    "### original with BN, divisor=4, epoch=10"
    ],
    "metadata": {
     "collapsed": false
@@ -322,7 +322,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### architecture=smaller(divisor=8), epoch=10"
+    "### original, divisor=8, epoch=10"
    ],
    "metadata": {
     "collapsed": false
@@ -352,7 +352,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### architecture=smaller(divisor=8) with BN in the contracting path, epoch=10"
+    "### original with BN, divisor=8, epoch=10"
    ],
    "metadata": {
     "collapsed": false
@@ -382,6 +382,66 @@
   {
    "cell_type": "markdown",
    "source": [
+    "### original, divisor=16, epoch=20"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "!python3 /content/GraduationProject/unet_constructing/keras_impl_run.py \\\n",
+    "    --structure=\"original\" \\\n",
+    "    --divisor=16 \\\n",
+    "    --dataset_dir_path=\"datasets/mri_pad_4\" \\\n",
+    "    --epoch_num=20\n",
+    "\n",
+    "a=get_size('datasets/mri_pad_4/models/keras_impl/original_divisor16_epoch20/saved_model')\n",
+    "print('model size: %.2f'%a,'MiB')\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### original with BN, divisor=16, epoch=20"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "!python3 /content/GraduationProject/unet_constructing/keras_impl_run.py \\\n",
+    "    --structure=\"original_with_BN\" \\\n",
+    "    --divisor=16 \\\n",
+    "    --dataset_dir_path=\"datasets/mri_pad_4\" \\\n",
+    "    --epoch_num=20\n",
+    "\n",
+    "a=get_size('datasets/mri_pad_4/models/keras_impl/original_with_BN_divisor16_epoch20/saved_model')\n",
+    "print('model size: %.2f'%a,'MiB')\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## on SORTEO dataset"
    ],
    "metadata": {
@@ -393,7 +453,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### architecture=original, epoch=10"
+    "### original, epoch=10"
    ],
    "metadata": {
     "pycharm": {
@@ -424,7 +484,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### architecture=original with BN in the contracting path, epoch=10"
+    "### original with BN, epoch=10"
    ],
    "metadata": {
     "pycharm": {
@@ -455,7 +515,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### architecture=smaller(divisor=2), epoch=10"
+    "### original, divisor=2, epoch=10"
    ],
    "metadata": {
     "pycharm": {
@@ -487,7 +547,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### architecture=smaller(divisor=2) with BN in the contracting path, epoch=10"
+    "### original with BN, divisor=2, epoch=10"
    ],
    "metadata": {
     "pycharm": {
@@ -519,7 +579,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### architecture=smaller(divisor=4), epoch=10"
+    "### original, divisor=4, epoch=10"
    ],
    "metadata": {
     "collapsed": false
@@ -549,7 +609,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### architecture=smaller(divisor=4) with BN in the contracting path, epoch=10"
+    "### original with BN, divisor=4, epoch=10"
    ],
    "metadata": {
     "collapsed": false
@@ -579,7 +639,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### architecture=smaller(divisor=8), epoch=10"
+    "### original, divisor=8, epoch=10"
    ],
    "metadata": {
     "collapsed": false
@@ -609,7 +669,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### architecture=smaller(divisor=8) with BN in the contracting path, epoch=10"
+    "### original with BN, divisor=8, epoch=10"
    ],
    "metadata": {
     "collapsed": false
@@ -627,6 +687,66 @@
     "    --epoch_num=10\n",
     "\n",
     "a=get_size('datasets/sorteo_pad_4/models/keras_impl/original_with_BN_divisor8_epoch10/saved_model')\n",
+    "print('model size: %.2f'%a,'MiB')\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### original, divisor=16, epoch=20"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "!python3 /content/GraduationProject/unet_constructing/keras_impl_run.py \\\n",
+    "    --structure=\"original\" \\\n",
+    "    --divisor=16 \\\n",
+    "    --dataset_dir_path=\"datasets/sorteo_pad_4\" \\\n",
+    "    --epoch_num=20\n",
+    "\n",
+    "a=get_size('datasets/sorteo_pad_4/models/keras_impl/original_divisor16_epoch20/saved_model')\n",
+    "print('model size: %.2f'%a,'MiB')\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### original with BN, divisor=16, epoch=20"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "!python3 /content/GraduationProject/unet_constructing/keras_impl_run.py \\\n",
+    "    --structure=\"original_with_BN\" \\\n",
+    "    --divisor=16 \\\n",
+    "    --dataset_dir_path=\"datasets/sorteo_pad_4\" \\\n",
+    "    --epoch_num=20\n",
+    "\n",
+    "a=get_size('datasets/sorteo_pad_4/models/keras_impl/original_with_BN_divisor16_epoch20/saved_model')\n",
     "print('model size: %.2f'%a,'MiB')\n"
    ],
    "metadata": {
@@ -738,7 +858,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### architecture=original, epoch=10"
+    "### original, epoch=10"
    ],
    "metadata": {
     "pycharm": {
@@ -769,7 +889,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### architecture=original with BN in the contracting path, epoch=10"
+    "### original with BN, epoch=10"
    ],
    "metadata": {
     "pycharm": {
@@ -800,7 +920,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### architecture=smaller(divisor=2), epoch=10"
+    "### original, divisor=2, epoch=10"
    ],
    "metadata": {
     "collapsed": false
@@ -830,7 +950,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### architecture=smaller(divisor=2) with BN in the contracting path, epoch=10"
+    "### original with BN, divisor=2, epoch=10"
    ],
    "metadata": {
     "collapsed": false
@@ -860,7 +980,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### architecture=smaller(divisor=4), epoch=10"
+    "### original, divisor=4, epoch=10"
    ],
    "metadata": {
     "collapsed": false
@@ -890,7 +1010,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### architecture=smaller(divisor=4) with BN in the contracting path, epoch=10"
+    "### original with BN, divisor=4, epoch=10"
    ],
    "metadata": {
     "collapsed": false
@@ -920,7 +1040,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### architecture=smaller(divisor=8), epoch=10"
+    "### original, divisor=8, epoch=10"
    ],
    "metadata": {
     "collapsed": false
@@ -950,7 +1070,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### architecture=smaller(divisor=8) with BN in the contracting path, epoch=10"
+    "### original with BN, divisor=8, epoch=10"
    ],
    "metadata": {
     "collapsed": false
@@ -980,6 +1100,66 @@
   {
    "cell_type": "markdown",
    "source": [
+    "### original, divisor=16, epoch=20"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "!python3 /content/GraduationProject/unet_constructing/tf_impl_run.py \\\n",
+    "    --structure=\"original\" \\\n",
+    "    --divisor=16 \\\n",
+    "    --dataset_dir_path=\"/content/GraduationProject/datasets/mri_pad_4\" \\\n",
+    "    --epoch_num=20\n",
+    "\n",
+    "a=get_size('datasets/mri_pad_4/models/tf_impl/original_divisor16_epoch20/saved_model')\n",
+    "print('model size: %.2f'%a,'MiB')\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### original with BN, divisor=16, epoch=20"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "!python3 /content/GraduationProject/unet_constructing/tf_impl_run.py \\\n",
+    "    --structure=\"original_with_BN\" \\\n",
+    "    --divisor=16 \\\n",
+    "    --dataset_dir_path=\"/content/GraduationProject/datasets/mri_pad_4\" \\\n",
+    "    --epoch_num=20\n",
+    "\n",
+    "a=get_size('datasets/mri_pad_4/models/tf_impl/original_with_BN_divisor16_epoch20/saved_model')\n",
+    "print('model size: %.2f'%a,'MiB')\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## on SORTEO dataset"
    ],
    "metadata": {
@@ -991,7 +1171,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### architecture=original, epoch=10"
+    "### original, epoch=10"
    ],
    "metadata": {
     "collapsed": false
@@ -1021,7 +1201,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### architecture=original with BN in the contracting path, epoch=10"
+    "### original with BN, epoch=10"
    ],
    "metadata": {
     "collapsed": false
@@ -1051,7 +1231,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### architecture=smaller(divisor=2), epoch=10"
+    "### original, divisor=2, epoch=10"
    ],
    "metadata": {
     "collapsed": false
@@ -1082,7 +1262,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### architecture=smaller(divisor=2) with BN in the contracting path, epoch=10"
+    "### original with BN, divisor=2, epoch=10"
    ],
    "metadata": {
     "collapsed": false
@@ -1113,7 +1293,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### architecture=smaller(divisor=4), epoch=10"
+    "### original, divisor=4, epoch=10"
    ],
    "metadata": {
     "collapsed": false
@@ -1144,7 +1324,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### architecture=smaller(divisor=4) with BN in the contracting path, epoch=10"
+    "### original with BN, divisor=4, epoch=10"
    ],
    "metadata": {
     "collapsed": false
@@ -1175,7 +1355,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### architecture=smaller(divisor=8), epoch=10"
+    "### original, divisor=8, epoch=10"
    ],
    "metadata": {
     "collapsed": false
@@ -1206,7 +1386,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### architecture=smaller(divisor=8) with BN in the contracting path, epoch=10"
+    "### original with BN, divisor=8, epoch=10"
    ],
    "metadata": {
     "collapsed": false
@@ -1225,6 +1405,68 @@
     "    --input_shape=[112,112,1]\n",
     "\n",
     "a=get_size('datasets/sorteo_pad_4/models/tf_impl/original_with_BN_divisor8_epoch10/saved_model')\n",
+    "print('model size: %.2f'%a,'MiB')\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### original, divisor=16, epoch=20"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "!python3 /content/GraduationProject/unet_constructing/tf_impl_run.py \\\n",
+    "    --structure=\"original\" \\\n",
+    "    --divisor=16 \\\n",
+    "    --dataset_dir_path=\"/content/GraduationProject/datasets/sorteo_pad_4\" \\\n",
+    "    --epoch_num=20 \\\n",
+    "    --input_shape=[112,112,1]\n",
+    "\n",
+    "a=get_size('datasets/sorteo_pad_4/models/tf_impl/original_divisor16_epoch20/saved_model')\n",
+    "print('model size: %.2f'%a,'MiB')\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### original with BN, divisor=16, epoch=20"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "!python3 /content/GraduationProject/unet_constructing/tf_impl_run.py \\\n",
+    "    --structure=\"original_with_BN\" \\\n",
+    "    --divisor=16 \\\n",
+    "    --dataset_dir_path=\"/content/GraduationProject/datasets/sorteo_pad_4\" \\\n",
+    "    --epoch_num=20 \\\n",
+    "    --input_shape=[112,112,1]\n",
+    "\n",
+    "a=get_size('datasets/sorteo_pad_4/models/tf_impl/original_with_BN_divisor16_epoch20/saved_model')\n",
     "print('model size: %.2f'%a,'MiB')\n"
    ],
    "metadata": {
